systems and resources starting to come together

--- a/falling_sand/CMakeLists.txt
+++ b/falling_sand/CMakeLists.txt
@@ -16,12 +16,21 @@ add_executable(falling_sand
         src/falling_sand/sim/cell.hpp
         src/falling_sand/sim/cell.cpp
         src/falling_sand/sim/SandboxConfig.hpp
-        src/falling_sand/sim/CellSystem.cpp
-        src/falling_sand/sim/CellSystem.hpp src/falling_sand/ui/Brush.cpp src/falling_sand/ui/Brush.hpp src/falling_sand/ui/InputSystem.cpp src/falling_sand/ui/InputSystem.hpp src/falling_sand/math/BitSet.cpp src/falling_sand/math/BitSet.hpp src/falling_sand/sim/cells/cells.hpp src/falling_sand/sim/cells/cells.cpp src/falling_sand/ui/Toolbox.cpp src/falling_sand/ui/Toolbox.hpp)
+        src/falling_sand/sim/CellSim.cpp
+        src/falling_sand/sim/CellSim.hpp
+        src/falling_sand/ui/Brush.cpp
+        src/falling_sand/ui/Brush.hpp
+        src/falling_sand/ui/InputSystem.cpp
+        src/falling_sand/ui/InputSystem.hpp
+        src/falling_sand/sim/cells/cells.hpp
+        src/falling_sand/sim/cells/cells.cpp
+        src/falling_sand/ui/Toolbox.cpp
+        src/falling_sand/ui/Toolbox.hpp src/falling_sand/MainState.cpp src/falling_sand/MainState.hpp src/falling_sand/CellSystem.cpp src/falling_sand/CellSystem.hpp)
+
 target_include_directories(falling_sand
         PUBLIC
         src
-        ../yage/include
+        ../yage/src
         ${SDL2_INCLUDE_DIRS})
 
 target_link_libraries(falling_sand yage ${CONAN_LIBS})
