--- a/rust_games/flood/Cargo.toml
+++ b/rust_games/flood/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "flood"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.5.0"
+bevy = "0.8.1"
+bevy_prototype_lyon = "0.6.0"
