--- a/rust_games/flood/Cargo.toml
+++ b/rust_games/flood/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.8.1"
+bevy_prototype_debug_lines = "0.8.1"
 bevy_prototype_lyon = "0.6.0"
 iyes_loopless = "0.7.1"
 
