--- a/squish/Cargo.toml
+++ b/squish/Cargo.toml
@@ -13,5 +13,5 @@ env_logger = "0.10.0"
 log = "0.4.17"
 pollster = "0.3.0"
 bytemuck = { version = "1.13.1", features = ["derive"]}
-cgmath = "0.18.0"
+cgmath = { version = "0.18.0", features =["swizzle"]}
 anyhow = "1.0.69"
