--- a/advent_of_code/Cargo.toml
+++ b/advent_of_code/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rayon = { version = "1.8.0", features = [] }
+
 [dependencies.regex]
 version = "1.10.2"
 features=["pattern"]
