--- a/synacor_challenge/Cargo.toml
+++ b/synacor_challenge/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "advent_of_code"
+name = "synacor_challenge"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rayon = { version = "1.8.0", features = [] }
-rand = "0.8.5"
-
-[dependencies.regex]
-version = "1.10.2"
-features=["pattern"]
