--- a/rust/protohackers/fly.toml
+++ b/rust/protohackers/fly.toml
@@ -1,20 +1,20 @@
-# fly.toml app configuration file generated for protohackers-zaiquiri on 2024-01-05T15:22:33+01:00
+# fly.toml app configuration file generated for protohackers-zaiquiri-thrumming-sea-2864 on 2024-01-07T11:52:16+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "protohackers-zaiquiri"
+app = "protohackers-zaiquiri-thrumming-sea-2864"
 primary_region = "lhr"
 
+[build]
+
 [[services]]
-  internal_port = 14293
-  protocol = "tcp"
-  auto_stop_machines = true
-  auto_start_machines = true
+  protocol = "udp"
+  internal_port = 8000
   min_machines_running = 0
 
   [[services.ports]]
-    port = 14293
+    port = 8000
 
 [[vm]]
   cpu_kind = "shared"
